vest-dsl/test/bad/choice_ints_variant_overlap.vest
fmt(@tag: u8) = choose(@tag) {
  1 => u8,
  2..5 => u16,
  20 => u32,
  3..10 => u24,
}
